Closed Bug 1519606 Opened 7 years ago Closed 7 years ago

Close button decoration is off center when using Ubuntu Yaru theme

Categories

(Core :: Widget: Gtk, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- unaffected
firefox65 --- unaffected
firefox66 + fixed

People

(Reporter: yoasif, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: nightly-community, regression)

Attachments

(4 files)

Using Ubuntu Disco with the Yaru theme.

Bug 1497002 regressed the display of the red-orange decoration around active window close button so that it is now not centered.

11:24.82 INFO: No more inbound revisions, bisection finished.
11:24.82 INFO: Last good revision: ebee32dc7abedd8621353f4ee27af9cf077e427e
11:24.82 INFO: First bad revision: 9a22edb5c335044baf5fd63f28553d5f6cfb4103
11:24.82 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ebee32dc7abedd8621353f4ee27af9cf077e427e&tochange=9a22edb5c335044baf5fd63f28553d5f6cfb4103

See screenshot.

Blocks: 1497002
Has Regression Range: --- → yes
Attached image misaligned-buttons.png

The maximize/restore button is also affected. The minimize button is unaffected.

Ambiance theme is unaffected.

Tracking for 66 as this is affecting our primary UI on Ubuntu (Yaru is the default theme on Ubuntu) and we are getting close to beta.

Yaru theme is not the only one affected, also NewAdwaita, Qohir and others.

(tagging as regression from bug 1490344, since that's where the default behavior changed such that this is now an issue in the default configuration)

Also, as a local workaround (not a fix): users can right-click the toolbar & choose "customize", and then check the "Title Bar" checkbox in the bottom left corner.

Martin, are you able to take a look at this?

Flags: needinfo?(stransky)

Yes, it's on my todo list for this week.

Assignee: nobody → stransky
Flags: needinfo?(stransky)

The second patch is not yet r+ by dao, please add the checkin-needed tag after that. Thank you.

Keywords: checkin-needed

Pushed by dgottwald@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f4f53e83954a
[Linux/Gtk] Don't add margin to icon position at titlebar buttons as it's already applied at drawing, r=dao
https://hg.mozilla.org/integration/autoland/rev/5797d4eee0ea
[Linux/Gtk] Compute correct margin for left titlebar buttons placement, r=dao

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: