Bug 1519606 - [Linux/Gtk] Don't add margin to icon position at titlebar buttons as it's already applied at drawing, r=dao

Differential Revision: https://phabricator.services.mozilla.com/D17347